# pytest-jenkins

./: .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  JenkinsDockerfile  Jenkinsfile  LICENSE  Makefile  README.md  XenialDockerfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: optimise_docker_image.md
src/pyjenk/: __init__.py
tests/: test_addition.py
