[metadata]

name = pyjenk

version = attr: src.pyjenk.__version__

author = attr: src.pyjenk.__author__

author_email = attr: src.pyjenk.__author_email__

description = attr: src.pyjenk.__description__

long_description = file: README.md, CHANGELOG.rst, LICENSE.txt

keywords = pyjenk

license = MIT 

classifiers =

	Programming Language :: Python :: 3

	Programming Language :: Python :: 3.3+

[options]

zip_safe = False

include_package_data = True

package_dir =

	=src

packages =

find:

python_requires =

>=3.6.0

install_requires =

	numpy

	pandas>=0.25.1

	pystache

	pyyaml

	scikit-learn>=0.21.3

	python-dotenv>=0.10.3

setup_requires =

	pytest-runner

	flake8

	pyyaml

	pystache

	sphinx

	sphinx-rtd-theme

tests_require =

	pytest

	pytest-cov

	coverage<5.0.0

# coverage<5.0.0 to avoid temporary bug when testing with p36, otherwise this line is not necessary

[options.packages.find]

where = src

[options.package_data]

* = *.txt, *.rst, *.md

[options.extras_require]

lint =

	flake8

dev =

	black

	wheel

doc =

	sphinx

[aliases]

lint = flake8

test = pytest

[tool:pytest]

addopts = --cov

python_files = tests/*

norecursedirs = integration .* build dist CVS _darcs {arch} *.egg venv

# [tool:flake8]

# exclude = .eggs

[coverage:run]

omit =

	env/*

	tests/*

	.eggs/*

	.tox/*

[build_sphinx]

source-dir = docs/

build-dir = ../docs/python/

all_files = 1
